--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e911d758",
+   "id": "587da1eb",
    "metadata": {},
    "outputs": [
     {
@@ -21,17 +21,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a216fbd",
+   "id": "50fcf59f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print ()"
+    "print ('')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6692696e",
+   "id": "7a4450c2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d5ec109",
+   "id": "b283ca84",
    "metadata": {},
    "outputs": [],
    "source": []
