--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9808a115",
+   "id": "3ee15721",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "af1be1d3",
+   "id": "0a9b57ab",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a984a143",
+   "id": "c48fba96",
    "metadata": {},
    "outputs": [
     {
@@ -56,8 +56,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "672bb6db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = 'Jaspreet'\n",
+    "print ()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "05ee3a9d",
+   "id": "d0ca4ea7",
    "metadata": {},
    "outputs": [],
    "source": []
