--- a/Reuven - September 2nd.ipynb
+++ b/Reuven - September 2nd.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bb3d3c33",
+   "id": "a0285d88",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "467d8dc2",
+   "id": "b5ac76b7",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "717ee774",
+   "id": "f98ae4f9",
    "metadata": {},
    "source": [
     "# Agenda\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6254780",
+   "id": "384fc1d9",
    "metadata": {},
    "source": [
     "# Quick intro to Jupyter\n",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3022770",
+   "id": "45d35020",
    "metadata": {},
    "source": [
     "# What is a programming language?\n",
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "537fa68d",
+   "id": "987b82c3",
    "metadata": {},
    "source": [
     "# Our Jupyter server\n",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b710b048",
+   "id": "3d3cc28e",
    "metadata": {},
    "source": [
     "# Printing text and numbers"
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "02e75751",
+   "id": "0361acdc",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7175a95e",
+   "id": "4e1705b8",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1df65c04",
+   "id": "8d7c14ff",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "02e0f334",
+   "id": "2906715e",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a6d401a5",
+   "id": "7dd2b08b",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3c3f7879",
+   "id": "f95bfcef",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d24f909c",
+   "id": "92340687",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ae7c5ae",
+   "id": "5ff4a76f",
    "metadata": {},
    "source": [
     "# Variables and assignment\n",
@@ -343,7 +343,54 @@
     "\n",
     "We use *variables* to store values in Python. Any variable in Python can refer to any value whatsoever. There is no such thing as a \"string variable\" or an \"integer variable\" or the like in Python. The first time you assign to a variable in Python, the variable is created. The second time, it's just assigned the new value.\n",
     "\n",
-    "How do we assign? We use the `=` operator, which is **NOT THE SAME** as `=` in mathematics. "
+    "How do we assign? We use the `=` operator, which is **NOT THE SAME** as `=` in mathematics.  In Python, `=` means:\n",
+    "\n",
+    "- Take the value on the right side\n",
+    "- Assign it to the variable on the left side\n",
+    "- If the variable doesn't yet exist, create it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2331ad41",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Reuven\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = 'Reuven'\n",
+    "\n",
+    "print('Hello, ' + name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba976824",
+   "metadata": {},
+   "source": [
+    "# Quotes or no quotes?\n",
+    "\n",
+    "- Variables *NEVER* have quotes around their names.\n",
+    "- String values *ALWAYS* have quotes around their names.\n",
+    "\n",
+    "Python doesn't care if you use `\"\"` or `''`. You just need to use the same kind at the start and end of each text string."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "237f4cf7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(name)   # this doesn't have quotes, so it's a variable, and we'll print the value of the variable \"nam\""
    ]
   }
  ],
