--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d619ad59",
+   "id": "d7063936",
    "metadata": {},
    "outputs": [
     {
@@ -20,8 +20,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "a6d62cc0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name='Asma'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ba1a0f05",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "what is my name Asma\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('what is my name ' + name)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "c27b4fd0",
+   "id": "74a2d91b",
    "metadata": {},
    "outputs": [],
    "source": []
