--- a/Sara_02092024.ipynb
+++ b/Sara_02092024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "07e5f6cb",
+   "id": "b8fb2a22",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f74578dd",
+   "id": "fee1bc8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,12 +30,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "bbf05932",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'name' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mHello, \u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m+\u001b[39m\u001b[43mname\u001b[49m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'name' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "print('Hello, ' +name)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "23d7d0c6",
+   "id": "9857118d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print()"
+    "name = \"Sara\" print('Hello, ' +name)"
    ]
   }
  ],
