--- a/shrasin2.ipynb
+++ b/shrasin2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2f57c0bc",
+   "id": "66cf7fc6",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "026c9ea0",
+   "id": "4373e98d",
    "metadata": {},
    "outputs": [
     {
@@ -41,16 +41,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0b7dd769",
+   "execution_count": 3,
+   "id": "371861ea",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello, world\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('hello, ' + 'world')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "11952b83",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Reuven\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = 'Reuven'\n",
+    "print('Hello, ' + name)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccc817f6",
+   "id": "9b0715a6",
    "metadata": {},
    "outputs": [],
    "source": []
