--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3ee15721",
+   "id": "ce4295be",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0a9b57ab",
+   "id": "78eec4da",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c48fba96",
+   "id": "296f5809",
    "metadata": {},
    "outputs": [
     {
@@ -56,19 +56,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "672bb6db",
+   "execution_count": 6,
+   "id": "b347605d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Jaspreet\n"
+     ]
+    }
+   ],
    "source": [
     "name = 'Jaspreet'\n",
-    "print ()"
+    "print ('Hello, ' + name)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0ca4ea7",
+   "id": "4a9a99a3",
    "metadata": {},
    "outputs": [],
    "source": []
