--- a/Reuven - September 2nd.ipynb
+++ b/Reuven - September 2nd.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a0285d88",
+   "id": "09c58c5c",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b5ac76b7",
+   "id": "98b6b127",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f98ae4f9",
+   "id": "83bb2240",
    "metadata": {},
    "source": [
     "# Agenda\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "384fc1d9",
+   "id": "f5c6a447",
    "metadata": {},
    "source": [
     "# Quick intro to Jupyter\n",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45d35020",
+   "id": "21aa0723",
    "metadata": {},
    "source": [
     "# What is a programming language?\n",
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "987b82c3",
+   "id": "c9dbd2fb",
    "metadata": {},
    "source": [
     "# Our Jupyter server\n",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d3cc28e",
+   "id": "b4e03a76",
    "metadata": {},
    "source": [
     "# Printing text and numbers"
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0361acdc",
+   "id": "2daef03c",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4e1705b8",
+   "id": "d7ab489c",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8d7c14ff",
+   "id": "4db6f68d",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2906715e",
+   "id": "4c505f0f",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7dd2b08b",
+   "id": "091c0954",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f95bfcef",
+   "id": "034eb840",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "92340687",
+   "id": "54786cec",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ff4a76f",
+   "id": "eec0766a",
    "metadata": {},
    "source": [
     "# Variables and assignment\n",
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "2331ad41",
+   "id": "2c0200cf",
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba976824",
+   "id": "7d9a1956",
    "metadata": {},
    "source": [
     "# Quotes or no quotes?\n",
@@ -385,12 +385,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "237f4cf7",
+   "execution_count": 11,
+   "id": "9bde3451",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reuven\n"
+     ]
+    }
+   ],
    "source": [
-    "print(name)   # this doesn't have quotes, so it's a variable, and we'll print the value of the variable \"nam\""
+    "print(name)   # this doesn't have quotes, so it's a variable, and we'll print the value of the variable \"name\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "09099da5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('name')  # this does have quotes, so it's a string, and we'll print the string 'name'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e32ef1c",
+   "metadata": {},
+   "source": [
+    "# Variable names\n",
+    "\n",
+    "What can you call variables in Python? You should use longish names that are descriptive. Remember that variable names will help you when you have to read and debug your code in another year or two.\n",
+    "\n",
+    "What is a valid variable name in Python?\n",
+    "\n",
+    "- Any c"
    ]
   }
  ],
