--- a/Reuven - September 2nd.ipynb
+++ b/Reuven - September 2nd.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e120d047",
+   "id": "acaf1ad8",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5a65a188",
+   "id": "f385a848",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "173726fa",
+   "id": "2fb4eeca",
    "metadata": {},
    "source": [
     "# Agenda\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d38b0fc",
+   "id": "586a65b3",
    "metadata": {},
    "source": [
     "# Quick intro to Jupyter\n",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abaf222b",
+   "id": "0e4f3096",
    "metadata": {},
    "source": [
     "# What is a programming language?\n",
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dece6c55",
+   "id": "a9e1d9eb",
    "metadata": {},
    "source": [
     "# Our Jupyter server\n",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "609521f7",
+   "id": "f27cdfeb",
    "metadata": {},
    "source": [
     "# Printing text and numbers"
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "eb418df4",
+   "id": "6071b49b",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e1fb252b",
+   "id": "864e8812",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "fad7aa17",
+   "id": "ebf9e59a",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4a58d340",
+   "id": "12b5811f",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d0942eb7",
+   "id": "0357b925",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d3003977",
+   "id": "a48dff5b",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d0692190",
+   "id": "dc3afc1e",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78bf4d97",
+   "id": "8fa9bc53",
    "metadata": {},
    "source": [
     "# Variables and assignment\n",
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "65bb52cb",
+   "id": "f31af5c0",
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7718a96b",
+   "id": "f3f6a976",
    "metadata": {},
    "source": [
     "# Quotes or no quotes?\n",
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "987ae868",
+   "id": "e9e6aea1",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e02c25bf",
+   "id": "c4503d85",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2b60323",
+   "id": "4bb2f5ce",
    "metadata": {},
    "source": [
     "# Variable names\n",
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "266bc061",
+   "id": "245adf97",
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "edafb13e",
+   "id": "e0f7ad90",
    "metadata": {},
    "outputs": [
     {
@@ -483,10 +483,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26ad4592",
+   "id": "9ba203f2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x = 'abcd'\n",
+    "type(x)  # this tells me what type of value in the variable x"
+   ]
   }
  ],
  "metadata": {
