--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "73d3d39b",
+   "id": "14fa4626",
    "metadata": {},
    "outputs": [
     {
@@ -21,10 +21,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3776ade2",
+   "id": "3d650fda",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "name = 'Mate'"
+   ]
   }
  ],
  "metadata": {
