--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bc049105",
+   "id": "f2782d90",
    "metadata": {},
    "outputs": [
     {
@@ -21,10 +21,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5060af4",
+   "id": "d3f662fa",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "name = Joe\n",
+    "pring(\"Hello \" + \"name\")"
+   ]
   }
  ],
  "metadata": {
