--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d7063936",
+   "id": "89035555",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a6d62cc0",
+   "id": "ddca44f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ba1a0f05",
+   "id": "251d1661",
    "metadata": {},
    "outputs": [
     {
@@ -49,10 +49,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74a2d91b",
+   "id": "cfe4a5ca",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print('')"
+   ]
   }
  ],
  "metadata": {
