--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "587da1eb",
+   "id": "53168305",
    "metadata": {},
    "outputs": [
     {
@@ -21,17 +21,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50fcf59f",
+   "id": "dc0fbb37",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print ('')"
+    "name = (Habib)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a4450c2",
+   "id": "43328fa6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b283ca84",
+   "id": "333be412",
    "metadata": {},
    "outputs": [],
    "source": []
