--- a/shrasin2.ipynb
+++ b/shrasin2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "35b29be1",
+   "id": "6ce66c88",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a902b901",
+   "id": "2d0ab0b0",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b70f3f47",
+   "id": "98c1fbde",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5599a0a9",
+   "id": "fb5a2d8b",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d7f39b24",
+   "id": "84a23650",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "bb9eb7a2",
+   "id": "5056aad9",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "deadf85a",
+   "id": "def981d9",
    "metadata": {},
    "outputs": [
     {
@@ -142,12 +142,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "94a59be8",
+   "execution_count": 8,
+   "id": "5dc436c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = 10\n",
+    "type(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "063f0976",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = 10"
+    "# comment line"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fffe16d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = 'shraddha'\n",
+    "pri"
    ]
   }
  ],
