--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ce4295be",
+   "id": "c987a477",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "78eec4da",
+   "id": "ca0d64e9",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "296f5809",
+   "id": "514b5c29",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b347605d",
+   "id": "47b449b1",
    "metadata": {},
    "outputs": [
     {
@@ -75,11 +75,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "19337725",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name = 'x'\n",
+    "type('name')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "4a9a99a3",
+   "id": "670ec128",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "name = "
+   ]
   }
  ],
  "metadata": {
