--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -38,13 +38,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "3149d30c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HEllo Dmitrii\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 'abcd'\n",
+    "name = 'Dmitrii'\n",
+    "print ('HEllo '+name) "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "031cf42b",
+   "id": "538237de",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "ч ="
-   ]
+   "source": []
   }
  ],
  "metadata": {
